# book-downloader

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  TODO.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
book_downloader/: application.py
book_downloader/core/: book_data.py  book_exporter.py  download_manager.py  exceptions.py  helpers.py
book_downloader/core/formatters/: __init__.py  txt.py
book_downloader/internal/: __init__.py  litnet_book_downloader.py  login_agent.py  misc.py  network.py
book_downloader/internal/downloaders/: __init__.py  litnet_book_downloader.py
book_downloader/sites/: __init__.py  litnet.py
certs/: zscaler.pem
docs/: README.md  cli.md  project-overview.md  roadmap.md
litnet_downloader/: application.py  book.py  book_downloader.py  book_exporter.py  cli.py  download_manager.py  exceptions.py  metadata.py  utils.py  version.py
litnet_downloader/core/: book_exporter.py  download_manager.py  helpers.py
litnet_downloader/core/formatters/: __init__.py  txt.py
litnet_downloader/details/: book_downloader.py  login_agent.py  metadata.py  misc.py
litnet_downloader/formatters/: __init__.py  txt.py
litnet_downloader/internal/: __init__.py  book_downloader.py  login_agent.py  metadata.py
src/book_downloader/: __init__.py  application.py
src/book_downloader/core/: book_data.py  book_exporter.py  download_manager.py  exceptions.py
src/book_downloader/core/formatters/: __init__.py  txt.py
src/book_downloader/internal/: asyncio.py  login_agent.py  metadata.py  misc.py  network.py
src/book_downloader/internal/downloaders/: __init__.py  litnet_book_downloader.py
src/book_downloader/sites/: __init__.py  litnet.py
