[project]
version = "1.3.0"
name = "book-downloader"
description = "Utility allows downloading books from litnet.com (and some other sites in the future)"
readme = "README.md"
license = "MIT"
authors = [{ name = "Sergii Lovygin", email = "lovygin.dev@gmail.com" }]

requires-python = ">=3.14"
dependencies = [
    "click",
    "aiohttp",
    "aiofiles",
    "lxml",
    "beautifulsoup4",
]

[project.scripts]
book-downloader = "book_downloader.application:cli"

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
    "mypy",
]

[tool.uv.build-backend]
module-name = "book_downloader"

[tool.ruff]
fix = true
line-length = 120
indent-width = 4
target-version = "py314"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = true
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
extend-select = ["I"]
ignore = ["E501"]
unfixable = ["B"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.mypy]
show_error_codes = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

[build-system]
requires = ["uv_build>=0.8.13,<0.12"]
build-backend = "uv_build"
