[metadata]
name = litnet-downloader
version = 1.0.5
author = Sergii Lovygin
author_email = sergey.lovygin@yahoo.com
summary = Utility allows to download books from litnet.com.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE

[options]
python_requires = >=3.8
packages = find:
install_requires =
    docopt
    requests
    lxml
    beautifulsoup4
zip_safe = False

[options.entry_points]
console_scripts =
    litnet-downloader = litnet_downloader.cli:run

[options.packages.find]
include=litnet_downloader*
