[metadata]
name = book-downloader
version = 1.2.0
author = Sergii Lovygin
author_email = sergey.lovygin@yahoo.com
summary = Utility allows downloading books from litnet.com (and some other sites in the future)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE

[options]
python_requires = >=3.11
packages = find:
install_requires =
    click
    aiohttp
    aiofiles
    lxml
    beautifulsoup4
zip_safe = False

[options.entry_points]
console_scripts =
    book-downloader = book_downloader.application:cli

[options.packages.find]
include=book_downloader*
